name:
  stm-graph
version:
  0.1.0
synopsis:
  A heterogenous directed mutable graph in STM
description:
category:
homepage:
  https://github.com/nikita-volkov/stm-graph 
bug-reports:
  https://github.com/nikita-volkov/stm-graph/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/stm-graph.git


library
  hs-source-dirs:
    library
  other-modules:
    STMGraph.Prelude
  exposed-modules:
    STMGraph
  ghc-options:
    -funbox-strict-fields
  build-depends:
    -- data:
    stm-containers == 0.2.*,
    hashable < 1.3,
    -- control:
    list-t == 0.3.*,
    focus >= 0.1.3 && < 0.2,
    transformers >= 0.3 && < 0.5,
    -- general:
    base-prelude > 0.1.1 && < 0.2,
    base >= 4.5 && < 4.8
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
